finished setting up html and css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
   <title>Salary Calculator</title>
+  <script src="script.js"></script>
 </head>
 <body>
   <header>
@@ -11,9 +12,76 @@
   </header>
   <main>
     <h2>Add Employee</h2>
+
+    
+      <form>
+        <input 
+          placeholder="First Name"
+          type="text"
+          id="firstNameInput"
+          data-testid="firstNameInput">
+        <input 
+          placeholder="Last Name"
+          type="text"
+          id="lastNameInput"
+          data-testid="lastNameInput">
+          <input 
+          placeholder="ID"
+          type="text"
+          id="idInput"
+          data-testid="idInput">
+        <input 
+          placeholder="Title"
+          type="text"
+          id="titleInput"
+          data-testid="titleInput">
+          <input 
+          placeholder="Annual Salary"
+          type="text"
+          id="annualSalaryInput"
+          data-testid="annualSalaryInput">
+      </form>
+      <button data-testid="submitButton"
+      id="submitButton"
+      class="submitButton"
+       onclick="submitButt(event)">Submit
+      </button>
+
     <h2>Employees</h2>
+
+    <section>
+      <table>
+        <thead>
+          <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>ID</th>
+            <th>Title</th>
+            <th>Annual Salary</th>
+            <th></th>
+
+          </tr>
+        </thead>
+        <tbody id="">
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+             
+          </tr>
+        </tfoot>
+      </table>
+    </section>
+
   </main>
-  <footer>
+  <footer class="over-budget">
     <p>Total Monthly</p>
   </footer>
 </body>
