finished submit button

--- a/index.html
+++ b/index.html
@@ -62,15 +62,8 @@
 
           </tr>
         </thead>
-        <tbody id="">
-          <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-          </tr>
+        <tbody id="tableBody">
+         
         </tbody>
         <tfoot>
           <tr>
