finished the delete button

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <button data-testid="submitButton"
       id="submitButton"
       class="submitButton"
-       onclick="submitButt(event)">Submit
+       onclick="submitButton(event)">Submit
       </button>
 
     <h2>Employees</h2>
@@ -75,7 +75,7 @@
 
   </main>
   <footer class="over-budget">
-    <p>Total Monthly</p>
+    <p>Total Monthly: $</p>
   </footer>
 </body>
 </html>
