--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   </main>
   <footer class="over-budget">
-    <p>Total Monthly: $</p>
+    <p>Total Monthly: $20000</p>
   </footer>
 </body>
 </html>
