got the html cap to conect with js

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   </main>
   <footer class="over-budget">
-    <p>Total Monthly: $20000</p>
+    <p>Total Monthly: $<span id="over-budget">20000</span></p>
   </footer>
 </body>
 </html>
