Fixed it and now works just need to fix button placement

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </main>
 
   <footer class="over-budget">
-    <p>Total Monthly: $<span id="over-budget">20000</span></p>
+    <p id="over-budget">Total Monthly: $0</p>
   </footer>
 </body>
 </html>
