--- a/index.html
+++ b/index.html
@@ -40,12 +40,15 @@
           type="text"
           id="annualSalaryInput"
           data-testid="annualSalaryInput">
-      </form>
-      <button data-testid="submitButton"
+        </form>
+    <p>
+      <button 
+      data-testid="submitButton"
       id="submitButton"
-      class="submitButton"
-       onclick="submitButton(event)">Submit
+       onclick="submitButton(event)">Submit 
       </button>
+    </p>
+  
 
     <h2>Employees</h2>
 
